--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         </title>
     </head>
     <body>
-        <h1>Hi, I'm Web Developer</h1>
+        <h1>Hi, I'm Web Designer</h1>
     </body>
 </html>
